join styles and required

--- a/join.html
+++ b/join.html
@@ -66,13 +66,13 @@
                 <form action="https://formspree.io/f/mlezynqq" method="POST">
                     <p class="red-tag">GET INVOLVED</p>
                     <h1 class=" animate__animated animate__fadeIn animate__slow">Join Our Team</h1>
-                    <input type="text" name="email"placeholder="Email" />
-                    <input type="text"name="Name" placeholder="Name" />
-                    <input type="text"name="PhoneNumber" placeholder="Phone Number" />
-                    <input type="text"name="School and Grade" placeholder="School and Grade" />
+                    <input required type="text" name="email"placeholder="Email" />
+                    <input required type="text"name="Name" placeholder="Name" />
+                    <input required type="text"name="PhoneNumber" placeholder="Phone Number" />
+                    <input required type="text"name="School and Grade" placeholder="School and Grade" />
 
                     <div>
-                        <textarea style="resize: none !important; " name="comment" id=""
+                        <textarea required style="resize: none !important; " name="comment" id=""
                             placeholder="What made you intrested in joining the Rocketry Team?"></textarea>
 
                         <button class="form-btn border-red" type="submit">SUBMIT</button>
