News section complete

--- a/outreach.html
+++ b/outreach.html
@@ -108,9 +108,9 @@
                         ></iframe>
                     </div>
                 </div>
-                <p style="text-align:center;">
+                <a style="text-align:center; color:#bababa; margin-left: 50px;" href = "https://manualredeye.com/94510/arts-entertainment/a-year-in-review-with-louisville-rocketry/">
                     https://manualredeye.com/93268/news/manualnews/blue-origin-executive-joins-the-rocketry-club-for-a-qa/
-                </p>
+                </a>
             </div>
         </div>
 
@@ -121,14 +121,9 @@
                 <div class="left">
                     <h2 >
                         In partnership with
-                        <span class="orange-txt"></span>
+                        <span class="orange-txt">River City Rocketry</span>
 
-                        <script>new TypeIt(".orange-txt", {
-                            strings: "River City Rocketry",
-                            speed: 75,
-                            waitUntilVisible: true,
-                          }).go();
-                          </script>
+                      
 
 
                     </h2>
