--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html">SPONSORS</a></li>
                 <li><a href="team.html">TEAM</a></li>
+                <li><a href="news.html">NEWS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li ><a href="join.html" class="border-red ">JOIN</a></li>
             </ul>
@@ -53,6 +54,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
@@ -129,6 +131,7 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
