News section updated all links to it

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
             <li><a href="outreach.html">OUTREACH</a></li>
             <li><a href="sponsor.html">SPONSORS</a></li>
             <li><a href="team.html">TEAM</a></li>
+            <li><a href="news.html">NEWS</a></li>
             <li><a href="contact.html" class="active-nav">CONTACT</a></li>
             <li><a href="join.html" class="border-red">JOIN</a></li>
         </ul>
@@ -49,6 +50,7 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html">SPONSORS</a></li>
                 <li><a href="team.html">TEAM</a></li>
+                <li><a href="news.html">NEWS</a></li>
                 <li>
                     <a href="contact.html" class="active-nav">CONTACT</a>
                 </li>
@@ -106,6 +108,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
