--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
@@ -62,6 +63,7 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                         <li><a href="join.html" class="border-red">JOIN</a></li>
                     </ul>
@@ -116,6 +118,7 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
