--- a/join.html
+++ b/join.html
@@ -35,6 +35,7 @@
             <li><a href="outreach.html">OUTREACH</a></li>
             <li><a href="sponsor.html">SPONSORS</a></li>
             <li><a href="team.html">TEAM</a></li>
+            <li><a href="news.html">NEWS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li>
                 <a href="join.html" class="border-red active-nav">JOIN</a>
@@ -51,6 +52,7 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html">SPONSORS</a></li>
                 <li><a href="team.html">TEAM</a></li>
+                <li><a href="news.html">NEWS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li>
                     <a href="join.html" class="border-red active-nav">JOIN</a>
@@ -102,6 +104,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
