--- a/news.html
+++ b/news.html
@@ -26,7 +26,8 @@
             <li><a href="outreach.html">OUTREACH</a></li>
             <li><a href="sponsor.html">SPONSORS</a></li>
             <li><a href="team.html">TEAM</a></li>
-            <li><a href="contact.html" class="active-nav">CONTACT</a></li>
+            <li><a href="news.html" class="active-nav">NEWS</a></li>
+            <li><a href="contact.html" >CONTACT</a></li>
             <li><a href="join.html" class="border-red">JOIN</a></li>
         </ul>
     </div>
@@ -40,8 +41,9 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html">SPONSORS</a></li>
                 <li><a href="team.html">TEAM</a></li>
+                <li><a href="news.html" class="active-nav">NEWS</a></li>
                 <li>
-                    <a href="contact.html" class="active-nav">CONTACT</a>
+                    <a href="contact.html" >CONTACT</a>
                 </li>
                 <li><a href="join.html" class="border-red">JOIN</a></li>
             </ul>
@@ -102,6 +104,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
