--- a/sponsor.html
+++ b/sponsor.html
@@ -38,6 +38,7 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html" class="active-nav">SPONSORS</a></li>
                 <li><a href="team.html">TEAM</a></li>
+                <li><a href="news.html">NEWS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="join.html" class="border-red">JOIN</a></li>
             </ul>
@@ -56,6 +57,7 @@
                         <a href="sponsor.html" class="active-nav">SPONSORS</a>
                     </li>
                     <li><a href="team.html">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
@@ -133,6 +135,7 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
