--- a/team.html
+++ b/team.html
@@ -38,6 +38,7 @@
                 <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="sponsor.html">SPONSORS</a></li>
                 <li><a href="team.html" class="active-nav">TEAM</a></li>
+                <li><a href="news.html">NEWS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="join.html" class="border-red">JOIN</a></li>
             </ul>
@@ -52,6 +53,7 @@
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html" class="active-nav">TEAM</a></li>
+                    <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
@@ -293,6 +295,7 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
